# mediapipe

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  a.out  test.cpp
emscripten_toolchain/: emscripten_config
mediapipe/: BUILD
mediapipe/examples/android/src/java/com/google/mediapipe/apps/basic/: BUILD
mediapipe/examples/desktop/hello_world/: BUILD  hello_world.cc
mediapipe/examples/wasm_stuff/box_tracking/: BUILD
mediapipe/examples/wasm_stuff/edge_detection/: BUILD
mediapipe/examples/wasm_stuff/edge_detection_base/: BUILD  hello_world.cc
mediapipe/examples/wasm_stuff/point_tracking/: BUILD  box-tracking.cc  demo_run_graph_main.cc  demo_run_graph_main_gpu.cc  hello-world-web.js  helloWorldVideoProcess.js  helloWorldWasm.cc  helloWorldWasm.cpp  helloWorldWebPage.html  opencvTrial.html  tracking-web.js  tracking.html  tracking_web.cc  videoProcess.js
mediapipe/framework/: BUILD
mediapipe/util/: BUILD
tracking modules webassembly/: tracking-web.js
