# Copyright 2019 The MediaPipe Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

licenses(["notice"])

exports_files(["LICENSE"])

package(default_visibility = ["//visibility:public"])

config_setting(
    name = "linux",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "macos",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "macos_arm64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:arm64",
    ],
)

config_setting(
    name = "windows",
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
    ],
)

filegroup(name = "empty")

alias(
    name = "binaries",
    actual = select({
        ":linux": "@emscripten_bin_linux//:all",
        ":macos": "@emscripten_bin_mac//:all",
        ":macos_arm64": "@emscripten_bin_mac_arm64//:all",
        ":windows": "@emscripten_bin_win//:all",
        "//conditions:default": ":empty",
    }),
)

alias(
    name = "node_modules",
    actual = select({
        ":linux": "@emscripten_npm_linux//:node_modules",
        ":macos": "@emscripten_npm_mac//:node_modules",
        ":macos_arm64": "@emscripten_npm_mac//:node_modules",
        ":windows": "@emscripten_npm_win//:node_modules",
        "//conditions:default": ":empty",
    }),
)
